--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<title>联系我们</title>
-		<meta charset="text/html;charset=utf-8" />
+		<meta charset="text/html;charset=gbk" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -25,7 +25,7 @@
 								<a href="left-sidebar.html">经营内容</a>
                             </li>
                             <li>
-								<a href="right-sidebar.html">最新成品</a>
+								<a href="subject_menu.html">项目展示</a>
                             </li>
                                 
 							<li><a href="no-sidebar.html">关于悟惑</a>
