--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -6,7 +6,7 @@
 -->
 <html lang="zh-CN">
 	<head>
-        <meta charset="text/html;charset=utf-8" />
+        <meta charset="text/html;charset=GBK" />
 		<title>经营内容</title>
 		
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -23,7 +23,7 @@
 						<ul>
 							<li ><a href="index.html">首页</a></li>
 							<li class="current"><a href="left-sidebar.html">经营内容</a></li>
-                            <li ><a href="right-sidebar.html">最新成品</a></li>
+                            <li ><a href="subject_menu.html">项目展示</a></li>
                             <li ><a href="no-sidebar.html">关于悟惑</a></li>
                             <li ><a href="contact.html">联系我们</a>
 							</li>
@@ -42,11 +42,12 @@
 
 					<!-- One -->
 						<section class="wrapper style4 container">
-
+                           <div class="row gtr-150">
+								<div class="col-8 col-12-narrower">
 							<!-- Content -->
 								<div class="content">
 									<section>
-										<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+										<a  class="image featured"><img src="images/9.png" alt="" /></a>
 										<header>
 											<h3>经营范围</h3>
 										</header>
@@ -56,12 +57,43 @@
                                         <p>4、艺术设计：为艺术家和设计师提供一个独特的媒介，让他们用光来讲述故事，传递情感。</p>
                                         <p>5、防伪技术：为产品或包装提供一种直观的防伪技术，只需用手机闪光灯照射就可以验证真伪。</p>
 									</section>
-                                    <footer class="major">
-                                        <ul class="buttons">
-                                            <li><a href="https://www.taobao.com/list/item/774196714808.htm" class="button">定制链接</a></li>
-                                        </ul>
-							        </footer>
+                                </div>
+                                </div>
+                                    <div class="col-4 col-12-narrower">
+
+									<!-- Sidebar -->
+										<div class="sidebar">
+											<section>
+                                                <a href="https://item.taobao.com/item.htm?id=760353731300" class="image featured"><img src="images/goods1.png" alt="" /></a>
+												<header>
+													<h3>艺术成品</h3>
+												</header>
+												<p>精致亚克力定制摆件，可爱的创意投影，以独特的光线折射效果，带来无限创意与视觉冲击，赋予您的生活空间前所未有的动感与活力。</p>
+												
+											</section>
+                                              <footer class="major">
+                                                 <ul class="buttons">
+                                                      <li><a href="https://item.taobao.com/item.htm?id=760353731300" class="button">定制链接</a></li>
+                                                 </ul>
+                                              </footer>
+
+											<section>
+										<a href="https://item.taobao.com/item.htm?id=774196714808" class="image featured"><img src="images/2.png" alt="" /></a>
+										<header>
+											<h3>专业定制</h3>
+										</header>
+										<p>我们的专业定制光影亚克力产品，凭借精密的光学设计和高品质亚克力材料，将光与影的艺术完美融合。
+                                            无论是企业礼品、品牌展示，还是个人定制，每一件都是独一无二的艺术品。</p>
+											</section>
+                                            <footer class="major">
+                                                 <ul class="buttons">
+                                                      <li><a href="https://www.taobao.com/list/item/774196714808.htm" class="button">定制链接</a></li>
+                                                 </ul>
+                                              </footer>
+										</div>
 								</div>
+                        </div>
+						</div>
 
 						</section>
 				</article>
