--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -6,8 +6,8 @@
 -->
 <html>
 	<head>
-		<title>最新产品</title>
-		 <meta charset="text/html;charset=utf-8" />
+		<title>目之飞星</title>
+		 <meta charset="text/html;charset=GBK" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -25,7 +25,7 @@
 								<a href="left-sidebar.html">经营内容</a>
                             </li>
                             <li class="current">
-								<a href="right-sidebar.html">最新成品</a>
+								<a href="subject_menu.html">项目展示</a>
                             </li>
                                 
 							<li ><a href="no-sidebar.html">关于悟惑</a>
@@ -43,7 +43,7 @@
 
 					<header class="special container">
                         <span class="icon solid fa-laptop"></span>
-						<h2>最新成品</h2>
+						<h2>项目展示</h2>
 					</header>
 
 					<!-- One -->
@@ -55,7 +55,7 @@
 									<!-- Content -->
 										<div class="content">
 											<section>
-												<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+												<a  class="image featured"><img src="images/7.jpg" alt="" /></a>
 												<header>
 													<h3>目之飞星</h3>
 												</header>
@@ -89,14 +89,15 @@
 											</section>
 
 											<section>
-												<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-												<header>
-													<h3>艺术品定制</h3>
-												</header>
-												<p>我们开通了淘宝店铺，只要您有光影成像、光影艺术设计、光学器件设计等光线操控相关的需求，我们都可以根据您的需求提供定制化方案。</p>
+										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+										<header>
+											<h3>绘光浮窗</h3>
+										</header>
+										<p>与中国美术学院艺术家合作创作的焦散成像艺术装置，是一项结合现代艺术与科学原理的创新项目。
+                                            该艺术装置通过精密计算的曲面形状精心设计，利用光线的折射和焦散效果，展现出独特的视觉美感。</p>
 												<footer>
 													<ul class="buttons">
-														<li><a href="left-sidebar.html" class="button small">了解更多</a></li>
+														<li><a href="subject_menu.html" class="button small">了解更多</a></li>
 													</ul>
 												</footer>
 											</section>
