--- a/subject_menu.html
+++ b/subject_menu.html
@@ -6,8 +6,8 @@
 -->
 <html>
 	<head>
-		<title>最新产品</title>
-		 <meta charset="text/html;charset=GBK" />
+		<title>项目展示</title>
+		 <meta charset="text/html;charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -54,7 +54,7 @@
 								<div class="col-6 col-12-narrower">
 
 									<section>
-										<a href="https://www.bilibili.com/video/BV19kA3e9Eje" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="nezha.html" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<header>
 											<h3>魔镜哪吒</h3>
 										</header>
