--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 								<a href="left-sidebar.html">经营内容</a>
                             </li>
                             <li class="menu">
-								<a href="right-sidebar.html">项目展示</a>
+								<a href="subject_menu.html">项目展示</a>
                             </li>
                                 
 							<li class="menu"><a href="no-sidebar.html">关于悟惑</a>
