--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<title>关于悟惑</title>
-		<meta charset="text/html;charset=utf-8" />
+		<meta charset="text/html;charset=gbk" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
