--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -59,8 +59,7 @@
                                             通过严谨的数学原理与巧妙的算法设计，我们所设计与加工的曲面可实现对光线的精细操控，创造出令
                                             人惊叹的视觉效果与光学特效。只要您有光影成像、光影艺术设计、光学器件设计等光线操控相关的需
                                             求，我们都可以根据您的需求提供定制化方案。</p>
-                                         <p>公司核心技术源自于中国科学技术大学数学科学学院GCL实验室多年的研发成果与积累，由张举勇教授团队
-                                             与英国卡迪夫大学邓柏林教授团队共同研发而成。通过深入研究数学原理与光学特性，我们能够精确地设
+                                         <p>公司核心技术源自于中国科学技术大学数学科学学院GCL实验室和英国卡迪夫大学研究团队多年的合作研发成果与积累,通过深入研究数学原理与光学特性，我们能够精确地设
                                              计和控制光线的传播路径，达到所需的光影效果。系列研究成果与产品化经验已在本领域形成了我们所独
                                              有的高精尖技术壁垒。</p>
                                         <p>目前，悟惑文化创意有限公司已利用相关技术与中央美术学院、中国美术学院合作
