--- a/index.html
+++ b/index.html
@@ -75,9 +75,23 @@
 						<strong>数学与光学共筑的视觉创新</strong></h2>
 						<p><strong>技术驱动</strong>：专注光影艺术与光学技术研发，结合数学建模与算法设计，精准操控光线，打造震撼视觉体验。<br/>
                             <strong>顶尖团队</strong>：核心技术源自中科大数学科学学院GCL实验室，联合英国卡迪夫大学专家团队，攻克几何光学难题。<br/>
-                            <strong>定制方案</strong>：覆盖光影成像、艺术设计、光学器件开发等方面，提供个性化技术解决方案.
+                            <strong>定制方案</strong>：覆盖光影成像、艺术设计、光学器件开发等方面，提供个性化技术解决方案.<br/><br/>
+
 						</p>
-					</header>
+                        <div class="row">
+								<div class="col-6 col-12-narrower">
+
+									<section>
+										
+                                        <a href="left-sidebar.html" class="image featured"><img src="images/goods2.png" alt="" /></a>
+									</section>
+                                </div>
+                                <div class="col-6 col-12-narrower">
+                                    <section>
+                                        <a href="subject_menu.html"class="image featured"><img src="images/goods3.png" alt="" /></a>
+									</section>
+								</div>
+							</div>
 
 					
 				</article>
